--- a/tables/index.html
+++ b/tables/index.html
@@ -81,30 +81,30 @@
         <li>On Features values in UD (only major features, listed <a
             href="https://universaldependencies.org/u/feat/index.html">here</a> are given)</li>
         <ul>
-          <li>PronType</li>
-          <li>Gender</li>
-          <li>VerbForm</li>
-          <li>NumType</li>
-          <li>Animacy</li>
-          <li>Mood</li>
-          <li>Poss</li>
-          <li>NounClass</li>
-          <li>Tense</li>
-          <li>Reflex</li>
-          <li>Number</li>
-          <li>Aspect</li>
-          <li>Foreign</li>
-          <li>Case</li>
-          <li>Voice</li>
-          <li>Abbr</li>
-          <li>Definite</li>
-          <li>Evident</li>
-          <li>Typo</li>
-          <li>Degree</li>
-          <li>Polarity</li>
-          <li>Person</li>
-          <li>Polite</li>
-          <li>Clusivity</li>
+          <li><a href="?data=ud/PronType">PronType</a></li>
+          <li><a href="?data=ud/Gender">Gender</a></li>
+          <li><a href="?data=ud/VerbForm">VerbForm</a></li>
+          <li><a href="?data=ud/NumType">NumType</a></li>
+          <li><a href="?data=ud/Animacy">Animacy</a></li>
+          <li><a href="?data=ud/Mood">Mood</a></li>
+          <li><a href="?data=ud/Poss">Poss</a></li>
+          <li><a href="?data=ud/NounClass">NounClass</a></li>
+          <li><a href="?data=ud/Tense">Tense</a></li>
+          <li><a href="?data=ud/Reflex">Reflex</a></li>
+          <li><a href="?data=ud/Number">Number</a></li>
+          <li><a href="?data=ud/Aspect">Aspect</a></li>
+          <li><a href="?data=ud/Foreign">Foreign</a></li>
+          <li><a href="?data=ud/Case">Case</a></li>
+          <li><a href="?data=ud/Voice">Voice</a></li>
+          <li><a href="?data=ud/Abbr">Abbr</a></li>
+          <li><a href="?data=ud/Definite">Definite</a></li>
+          <li><a href="?data=ud/Evident">Evident</a></li>
+          <li><a href="?data=ud/Typo">Typo</a></li>
+          <li><a href="?data=ud/Degree">Degree</a></li>
+          <li><a href="?data=ud/Polarity">Polarity</a></li>
+          <li><a href="?data=ud/Person">Person</a></li>
+          <li><a href="?data=ud/Polite">Polite</a></li>
+          <li><a href="?data=ud/Clusivity">Clusivity</a></li>
         </ul>
     </div>
 
