meta is a collection

--- a/tables/index.html
+++ b/tables/index.html
@@ -83,13 +83,13 @@
              </p>
 
 
-             <div class="row" style="width: 100%; margin: auto">
-              <div class="col-sm-4">
-                <a href="?data=ud_feats/FEATS">
+             <div class="row" style="margin-bottom: 20px;">
+              <div class="col-sm-6">
+                <a href="?data=ud_deps/DEPS">
                   <div class="card">
-                    <div class="card-header">Features in UD</code></div>
+                    <div class="card-header">Dependencies in UD</code></div>
                     <div class="card-body" style="text-align: center;">
-                      <img src="https://universaldependencies.org/logos/logo-ud.png" style="width:15%; margin-right:30px;" alt="UD">
+                      <img src="https://universaldependencies.org/logos/logo-ud.png" style="height: 50px;" alt="UD">
                     </div>
                   </div>
                 </a>
