--- a/tables/index.html
+++ b/tables/index.html
@@ -82,6 +82,7 @@
               <a href="https://github.com/surfacesyntacticud/tools/tree/master/tables">Github project</a>.
              </p>
 
+            <p>Pick one of the four collections below:</p>
 
              <div class="row" style="margin-bottom: 20px;">
               <div class="col-sm-6">
@@ -94,22 +95,36 @@
                   </div>
                 </a>
               </div>
-              <div class="col-sm-4">
-                <a href="?data=ud_deps/DEPS">
-                  <div class="card">
-                    <div class="card-header">Dependencies in UD</code></div>
-                    <div class="card-body" style="text-align: center;">
-                      <img src="https://universaldependencies.org/logos/logo-ud.png" style="width:15%; margin-right:30px;" alt="UD">
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="col-sm-4">
+              <div class="col-sm-6">
                 <a href="?data=sud_deps/DEPS">
                   <div class="card">
                     <div class="card-header">Dependencies in SUD</code></div>
                     <div class="card-body" style="text-align: center;">
-                      <img src="https://surfacesyntacticud.github.io/images/sud.svg" style="width:15%; margin-left:30px" alt="SUD">
+                      <img src="https://surfacesyntacticud.github.io/images/sud.svg" style="height: 50px;" alt="SUD">
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+
+            <div class="row" style="margin-bottom: 20px;">
+              <div class="col-sm-6">
+                <a href="?data=ud_feats/FEATS">
+                  <div class="card">
+                    <div class="card-header">Features in UD</code></div>
+                    <div class="card-body" style="text-align: center;">
+                      <img src="https://universaldependencies.org/logos/logo-ud.png" style="height: 50px;" alt="UD">
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-sm-6">
+                <a href="?data=meta/META">
+                  <div class="card">
+                    <div class="card-header">Metadata in UD</code></div>
+                    <div class="card-body" style="text-align: center;">
+                      <img src="https://universaldependencies.org/logos/logo-ud.png" style="height: 50px;" alt="UD">
                     </div>
                   </div>
                 </a>
@@ -128,7 +143,7 @@
   
     <div class="row" style="width: 100%; margin: auto">
       <div class="col-sm-1" style="padding-left: 0;">
-        <button type="button" class="btn btn-success btn-sm" onclick="javascript:open_modal()">Collections</button>
+        <button v-show='!portal' type="button" class="btn btn-success btn-sm" onclick="javascript:open_modal()">Collections</button>
       </div>
       <div class="col-sm-10" v-html="title" style="text-align: center;"></div>
     </div> 
