more generic tables / multi_request

--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -7,6 +7,12 @@
   </head>
   <body>
 <h1 id="grew-tables">Grew tables</h1>
+<h2 id="multi-request-multi-treebanks">multi request / multi
+treebanks</h2>
+<ul>
+<li><a
+href="index.html?data=_tables/sud/subj_french">subj_french</a></li>
+</ul>
 <h2
 id="relating-upos-or-extpos-to-the-dependency-relation-with-the-head">Relating
 UPOS (or ExtPos) to the dependency relation with the head</h2>
