--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -23,11 +23,9 @@ href="index.html?data=_tables/SUD_French-GSD/label_upos">SUD_French-GSD</a></li>
 href="index.html?data=_tables/SUD_French-Rhapsodie/label_upos">SUD_French-Rhapsodie</a></li>
 <li><a
 href="index.html?data=_tables/SUD_French-ParisStories/label_upos">SUD_French-ParisStories</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-Rhapsodie/label_upos">SUD_French-Rhapsodie</a></li>
 </ul>
-<h2 id="lemmas-which-appears-with-more-than-one-upos">Lemmas which
-appears with more than one UPOS</h2>
+<h2 id="lemmas-which-appear-with-more-than-one-upos">Lemmas which appear
+with more than one UPOS</h2>
 <ul>
 <li><a
 href="index.html?data=_tables/SUD_French-GSD/amb_lemma">SUD_French-GSD</a></li>
@@ -35,8 +33,6 @@ href="index.html?data=_tables/SUD_French-GSD/amb_lemma">SUD_French-GSD</a></li>
 href="index.html?data=_tables/SUD_French-Rhapsodie/amb_lemma">SUD_French-Rhapsodie</a></li>
 <li><a
 href="index.html?data=_tables/SUD_French-ParisStories/amb_lemma">SUD_French-ParisStories</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-Rhapsodie/amb_lemma">SUD_French-Rhapsodie</a></li>
 </ul>
 <h2 id="what-feature-is-used-on-which-upos">What feature is used on
 which UPOS</h2>
