Separate tables that are only WIP

--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -7,12 +7,6 @@
   </head>
   <body>
 <h1 id="grew-tables">Grew tables</h1>
-<h2 id="multi-request-multi-treebanks">multi request / multi
-treebanks</h2>
-<ul>
-<li><a
-href="index.html?data=_tables/sud/subj_french">subj_french</a></li>
-</ul>
 <h2
 id="relating-upos-or-extpos-to-the-dependency-relation-with-the-head">Relating
 UPOS (or ExtPos) to the dependency relation with the head</h2>
@@ -50,7 +44,17 @@ href="index.html?data=_tables/SUD_Zaar-Autogramm/stat_pos_features">SUD_Zaar-Aut
 <li><a
 href="index.html?data=_tables/SUD_Naija-NSC/stat_pos_features">SUD_Naija-NSC</a></li>
 </ul>
-<h2 id="parseme-tag-per-leanguages">Parseme: tag per leanguages</h2>
+<h1 id="work-in-progress">Work in progress</h1>
+<p>These tables are not complete, it is just WIP to build tables which
+concern more than one treebank. The data does not correspond to the full
+treebanks.</p>
+<h2 id="multi-request-multi-treebanks">multi request / multi
+treebanks</h2>
+<ul>
+<li><a
+href="index.html?data=_tables/sud/subj_french">subj_french</a></li>
+</ul>
+<h2 id="parseme-tag-per-languages">Parseme: tag per languages</h2>
 <ul>
 <li><a href="index.html?data=_tables/parseme/lang_tags">Parseme
 1.3</a></li>
