--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -17,6 +17,8 @@ href="index.html?data=_tables/SUD_French-GSD/label_upos">SUD_French-GSD</a></li>
 href="index.html?data=_tables/SUD_French-Rhapsodie/label_upos">SUD_French-Rhapsodie</a></li>
 <li><a
 href="index.html?data=_tables/SUD_French-ParisStories/label_upos">SUD_French-ParisStories</a></li>
+<li><a
+href="index.html?data=_tables/PS_2023/label_upos">PS_2023</a></li>
 </ul>
 <h2 id="lemmas-which-appear-with-more-than-one-upos">Lemmas which appear
 with more than one UPOS</h2>
@@ -27,6 +29,7 @@ href="index.html?data=_tables/SUD_French-GSD/amb_lemma">SUD_French-GSD</a></li>
 href="index.html?data=_tables/SUD_French-Rhapsodie/amb_lemma">SUD_French-Rhapsodie</a></li>
 <li><a
 href="index.html?data=_tables/SUD_French-ParisStories/amb_lemma">SUD_French-ParisStories</a></li>
+<li><a href="index.html?data=_tables/PS_2023/amb_lemma">PS_2023</a></li>
 </ul>
 <h2 id="what-feature-is-used-on-which-upos">What feature is used on
 which UPOS</h2>
@@ -37,6 +40,8 @@ href="index.html?data=_tables/SUD_French-GSD/stat_pos_features">SUD_French-GSD</
 href="index.html?data=_tables/SUD_French-Rhapsodie/stat_pos_features">SUD_French-Rhapsodie</a></li>
 <li><a
 href="index.html?data=_tables/SUD_French-ParisStories/stat_pos_features">SUD_French-ParisStories</a></li>
+<li><a
+href="index.html?data=_tables/PS_2023/stat_pos_features">PS_2023</a></li>
 <li><a
 href="index.html?data=_tables/SUD_Beja-NSC/stat_pos_features">SUD_Beja-NSC</a></li>
 <li><a
