--- a/grewpy/html/list.html
+++ b/grewpy/html/list.html
@@ -7,62 +7,32 @@
   </head>
   <body>
 <h1 id="grew-tables">Grew tables</h1>
+<h2 id="parseme">Parseme</h2>
+<ul>
+<li>usage of tags per languages: <a
+href="index.html?data=parseme/labels@1.3">version 1.3</a> • <a
+href="index.html?data=parseme/labels@master">master</a></li>
+<li>validation: <a href="index.html?data=parseme/valid@1.3">version
+1.3</a> • <a href="index.html?data=parseme/valid@master">master</a></li>
+</ul>
 <h2
 id="relating-upos-or-extpos-to-the-dependency-relation-with-the-head">Relating
 UPOS (or ExtPos) to the dependency relation with the head</h2>
 <ul>
 <li><a
-href="index.html?data=_tables/SUD_French-GSD/label_upos">SUD_French-GSD</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-Rhapsodie/label_upos">SUD_French-Rhapsodie</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-ParisStories/label_upos">SUD_French-ParisStories</a></li>
-<li><a
-href="index.html?data=_tables/PS_2023/label_upos">PS_2023</a></li>
+href="index.html?data=SUD_French-GSD/label_upos@2.12">SUD_French-GSD</a></li>
 </ul>
 <h2 id="lemmas-which-appear-with-more-than-one-upos">Lemmas which appear
 with more than one UPOS</h2>
 <ul>
 <li><a
-href="index.html?data=_tables/SUD_French-GSD/amb_lemma">SUD_French-GSD</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-Rhapsodie/amb_lemma">SUD_French-Rhapsodie</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-ParisStories/amb_lemma">SUD_French-ParisStories</a></li>
-<li><a href="index.html?data=_tables/PS_2023/amb_lemma">PS_2023</a></li>
+href="index.html?data=SUD_French-GSD/amb_lemma@2.12">SUD_French-GSD</a></li>
 </ul>
 <h2 id="what-feature-is-used-on-which-upos">What feature is used on
 which UPOS</h2>
 <ul>
 <li><a
-href="index.html?data=_tables/SUD_French-GSD/stat_pos_features">SUD_French-GSD</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-Rhapsodie/stat_pos_features">SUD_French-Rhapsodie</a></li>
-<li><a
-href="index.html?data=_tables/SUD_French-ParisStories/stat_pos_features">SUD_French-ParisStories</a></li>
-<li><a
-href="index.html?data=_tables/PS_2023/stat_pos_features">PS_2023</a></li>
-<li><a
-href="index.html?data=_tables/SUD_Beja-NSC/stat_pos_features">SUD_Beja-NSC</a></li>
-<li><a
-href="index.html?data=_tables/SUD_Zaar-Autogramm/stat_pos_features">SUD_Zaar-Autogramm</a></li>
-<li><a
-href="index.html?data=_tables/SUD_Naija-NSC/stat_pos_features">SUD_Naija-NSC</a></li>
-</ul>
-<h1 id="work-in-progress">Work in progress</h1>
-<p>These tables are not complete, it is just WIP to build tables which
-concern more than one treebank. The data does not correspond to the full
-treebanks.</p>
-<h2 id="multi-request-multi-treebanks">multi request / multi
-treebanks</h2>
-<ul>
-<li><a
-href="index.html?data=_tables/sud/subj_french">subj_french</a></li>
-</ul>
-<h2 id="parseme-tag-per-languages">Parseme: tag per languages</h2>
-<ul>
-<li><a href="index.html?data=_tables/parseme/lang_tags">Parseme
-1.3</a></li>
+href="index.html?data=SUD_French-GSD/pos_features@2.12">SUD_French-GSD</a></li>
 </ul>
   </body>
 </html>
